[package]
name = "mergle"
version = "0.6.0"
authors = ["Ben Weinstein-Raun <root@benwr.net>",
           "Jennifer Blight <jgblight@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
description = "A data structure with fast merging and comparison"
repository = "https://github.com/benwr/mergle"
categories = ["data-structures", "no-std"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
bromberg_sl2 = "0.7.0"

[dev-dependencies]
quickcheck = "1.0.3"
